// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-for > basic v-for 1`] = `
"import { delegate as _delegate, setText as _setText, renderEffect as _renderEffect, createFor as _createFor, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    _delegate(n2, "click", () => $event => (_ctx.remove(_block.s[0])))
    const _updateEffect = () => {
      const [item] = _block.s
      _setText(n2, item)
    }
    _renderEffect(_updateEffect)
    return [n2, _updateEffect]
  }, (item) => (item.id))
  return n0
}"
`;

exports[`compiler: v-for > multi effect 1`] = `
"import { setDynamicProp as _setDynamicProp, renderEffect as _renderEffect, createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    const _updateEffect = () => {
      const [item, index] = _block.s
      _setDynamicProp(n2, "item", item)
      _setDynamicProp(n2, "index", index)
    }
    _renderEffect(_updateEffect)
    return [n2, _updateEffect]
  })
  return n0
}"
`;

exports[`compiler: v-for > w/o value 1`] = `
"import { createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div>item</div>")

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    return [n2, () => {}]
  })
  return n0
}"
`;
